...
    @DrawableRes val Crosshair = R.drawable.ic_lucide_crosshair
    @DrawableRes val ExternalLink = R.drawable.ic_lucide_external_link
    @DrawableRes val Footprints = R.drawable.ic_lucide_footprints
    @DrawableRes val Globe = R.drawable.ic_lucide_globe
    @DrawableRes val Grid2x2Plus = R.drawable.ic_lucide_grid_2x2_plus
    @DrawableRes val Headphones = R.drawable.ic_lucide_headphones
    @DrawableRes val Home = R.drawable.ic_lucide_home
    @DrawableRes val Info = R.drawable.ic_lucide_info
    @DrawableRes val LayoutDashboard = R.drawable.ic_lucide_layout_dashboard
    @DrawableRes val List = R.drawable.ic_lucide_list
    @DrawableRes val ListOrdered = R.drawable.ic_lucide_list_ordered
    @DrawableRes val LocateFixed = R.drawable.ic_lucide_locate_fixed
    @DrawableRes val Mail = R.drawable.ic_lucide_mail
...
